--- a/cart.html
+++ b/cart.html
@@ -1,41 +1,61 @@
 <html>
-  <head>
+<head>
     <title>Ajax</title>
     <style>
-      .goods, .cart{
-        width: 250px;
-        border: 1px solid #eee;
-      }
-      .goods ul, .cart ul{
-        width: 190px;
-      }
-      .goods ul li,.cart ul li{
-        padding: 5px;
-      }
-      .buy,.delete, .buyOne, .delete_one {
-        float: right;
-      }
-      .approved {
-        background-color: aquamarine;
-      }
+        .goods, .cart {
+            width: 250px;
+            border: 1px solid #eee;
+        }
 
-      .declined {
-        background-color: crimson;
-      }
+        .goods ul, .cart ul {
+            width: 190px;
+        }
+
+        .goods ul li, .cart ul li {
+            padding: 5px;
+        }
+
+        .buy, .delete, .buyOne, .delete_one {
+            float: right;
+        }
+
+        .approved {
+            background-color: aquamarine;
+        }
+
+        .declined {
+            background-color: crimson;
+        }
+
+        .feedback {
+            margin-top: 30px;
+            border: 1px solid #eee;
+            width: auto;
+            height: auto;
+        }
+
+        .feedback ul {
+            margin: 0;
+        }
+
+        .text {
+            display: block;
+        }
+
+        .send {
+            margin-left: 114px;
+        }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="cart.js"></script>
-  </head>
-  <body>
-    <div id="goods" class="goods"></div>
-    <div id="cart" class="cart"></div>
+    <script src="feedback.js"></script>
+</head>
+<body>
+<div id="goods" class="goods"></div>
+<div id="cart" class="cart"></div>
 
-    <ul>
-      <li class="approved">Comment1</li>
-      <li class="declined">Comment2</li>
-      <li>Comment3 <button>Approve</button><button>Decline</button></li>
-    </ul>
-    <textarea></textarea>
-    <button>Send</button>
-  </body>
+
+<div class="feedback" id="feedback"></div>
+<div class="textButton" id="textButton"></div>
+</body>
 </html>
