--- a/cart.html
+++ b/cart.html
@@ -45,6 +45,9 @@
         .send {
             margin-left: 114px;
         }
+        .approved_button{
+            margin-left: 15px;
+        }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="cart.js"></script>
